Fix emoji alignment

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -49,6 +49,7 @@ article {
 emoji {
   font-size: 3em;
   display: block;
+  text-align: center;
 }
 
 img.emoji {
